Fixes squished images

--- a/app/assets/stylesheets/my_profile.css.scss
+++ b/app/assets/stylesheets/my_profile.css.scss
@@ -2,7 +2,7 @@
   height: 5em;
   width: 8em;
   left: 23%;
-  top:8%;
+  top:6%;
   position: absolute;
 }
 
@@ -22,16 +22,16 @@ image.album_art{
 }
 
 .follow{
-  height: 35%;
+  height: 27%;
   width: 50%;
   left: 54%;
-  top: 8%;
+  top: 3%;
   position: absolute;
 }
 
 img.profile_image{
   left: 7%;
-  top: 11%;
+  top: 8%;
   position: absolute;
 }
 
